[FIX] website, website_sale: fix search design
In commit[1] the search was refactored but some design broke during the
review process.

- The search page and search inside the dropdown now share the same
template but only the search page needs the roundness and negative
margin.

- `--dropdown-link-hover-bg` is not defined without a `dropdown` class,
replaced with the SCSS var instead

- In `website_sale.search_result_items` the
`t-out="result['attribute_value_ids']` tries to output a `<div>` inside
a paragraph, which leads to an automatic closing of the `<p>` tag and an
empty paragraph which makes the search_item not centered anymore due to
the empty paragraph margins.

task-6106135

[1]: odoo/odoo@9d0a9754e7dbf309fb692c54a63ff29ac6972350

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -2517,7 +2517,7 @@ $ribbon-padding: 100px;
 
     &:not(.o_search_result_item_placeholder):hover,
     & .o_search_result_link:focus-visible {
-        background-color: var(--dropdown-link-hover-bg);
+        background-color: $dropdown-link-hover-bg;
     }
 
     .o_search_result_link:focus-visible {
